--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- title which shows on title bar of browser -->
     <title>Stopwatch</title>
     <!-- favicon(image with .ico extension) which shows on title bar of browser -->
-  <link rel ="shortcut icon" type ="image/icon" href="favicon.ico">
+  <link rel ="shortcut icon" type ="image/icon" href="./favicon.ico">
   <!-- External Css file -->
     <link rel="stylesheet" href="stopwatch.css">
     <!-- Metadata(information about the page or content) -->
